[gd_scene load_steps=2 format=3 uid="uid://1p8yicjyh74n"]

[ext_resource type="Script" path="res://assets/misc_scripts/scmPauseUI.gd" id="1_gyhaf"]

[node name="uiPauseMenu" type="Control"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_gyhaf")

[node name="Container" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = -96.0
offset_top = -96.0
offset_right = 96.0
offset_bottom = 99.0

[node name="Inventory" type="Button" parent="Container"]
layout_mode = 2
text = "INVENTORY"

[node name="Button" type="Button" parent="Container"]
layout_mode = 2
text = "QUESTS"

[node name="Posse" type="Button" parent="Container"]
layout_mode = 2
text = "POSSE"

[node name="Save" type="Button" parent="Container"]
layout_mode = 2
text = "SAVE"

[node name="Quit" type="Button" parent="Container"]
layout_mode = 2
text = "QUIT "

[connection signal="tree_exited" from="." to="." method="_on_tree_exited"]
[connection signal="pressed" from="Container/Inventory" to="." method="_on_inventory_pressed"]
[connection signal="pressed" from="Container/Posse" to="." method="_on_posse_pressed"]
[connection signal="pressed" from="Container/Quit" to="." method="_on_quit_pressed"]
